Added email verification
